feat: Update application name and branding
Updates the application name and related branding elements to "Flow~ Up (플로우~ 업)" across package.json, index.html, metadata.json, App.tsx, and features/Dashboard.tsx. This change standardizes the application's identity for consistency.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>플로우업(FlowUp)</title>
+    <title>Flow~ Up (플로우~ 업)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @keyframes fadeIn {
