--- a/index.html
+++ b/index.html
@@ -29,17 +29,20 @@
       }
     </script>
      <script type="importmap">
-      {
-        "imports": {
-          "react": "https://aistudiocdn.com/react@^19.1.1",
-          "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-          "react/": "https://aistudiocdn.com/react@^19.1.1/",
-          "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0",
-          "lucide-react": "https://aistudiocdn.com/lucide-react@^0.418.0",
-          "canvas-confetti": "https://aistudiocdn.com/canvas-confetti@^1.9.3"
-        }
-      }
-    </script>
+{
+  "imports": {
+    "react": "https://aistudiocdn.com/react@^19.1.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.418.0",
+    "canvas-confetti": "https://aistudiocdn.com/canvas-confetti@^1.9.3",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.2.1/"
+  }
+}
+</script>
 </head>
 <body class="bg-slate-900 text-white">
     <div id="root"></div>
